# template-mkdocs

./: Makefile  README.md  cookiecutter.json  copier.yml  entangled.toml
template/: entangled.toml  mkdocs.yml.jinja  pyproject.toml  pyproject.toml.jinja
template/docs/: demo.md
{{ cookiecutter.project_slug }}/: mkdocs.yml  pyproject.toml
{{ cookiecutter.project_slug }}/docs/: index.md
